# minimal-fda-repro

./: package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fda.rs  main.rs
